Fix for call to action alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -119,6 +119,9 @@
     position: relative;
     z-index: 1;
     margin-left: 5%;
+    @media screen and (min-width: 45em) {
+      margin-left: 0;
+    }
     @media screen and (min-width: 28.125em) {
       padding: 0.8em 1.7em;
       font-size: 0.85rem;
